--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=لم يعد بالإمكان إضافة تجزئة لأنه قد تم حذفها.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=يتعذر حذف إدخال التجزئة لأنه مطلوب بواسطة قالب صفحة واحد أو أكثر.
 the-fragment-entry-could-not-be-found=تعذر العثور على إدخال المقطع.
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=لم يتم العثور على نسخة إطار العمل.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=يتجاوز عنوان URL الودي حد {0} حرفًا بالتنسيق المشفر. الرجاء إدخال عنوان URL أقصر.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=الرابط التشعبي الودي الذي يكون من عنوان البريد الإلكتروني الذي طلبته قد يتعارض مع رابط تشعبي ودي حالي.
