--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -16449,7 +16449,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Das Fragment kann nicht mehr hinzugefügt werden, da es gelöscht wurde.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Der Fragment-Eintrag kann nicht gelöscht werden, da er von einer oder mehreren Seitenvorlagen benötigt wird.
 the-fragment-entry-could-not-be-found=Der Fragment-Eintrag konnte nicht gefunden werden.
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Die Frameworkversion konnte nicht gefunden werden.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=Die benutzerfreundliche URL überschreitet im codierten Format die Begrenzung von {0} Zeichen. Bitte geben Sie eine kürzere URL ein.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Die benutzerfreundliche URL, die aufgrund Ihrer gewünschten E-Mail-Adresse generiert wurde, könnte mit einer existierenden benutzerfreundlichen URL kollidieren.
