--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=टुकड़ा अब नहीं जोड़ा जा सकता है क्योंकि इसे हटा दिया गया है। (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=टुकड़ा प्रविष्टि हटाया नहीं जा सकता है क्योंकि यह एक या एक से अधिक पृष्ठ टेम्पलेट्स के लिए आवश्यक है । (Automatic Translation)
 the-fragment-entry-could-not-be-found=टुकड़ा प्रवेश नहीं मिल सका। (Automatic Translation)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Framework version पाया नहीं जा सका|
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=आपके द्वारा अनुरोध किए गए ईमेल पते से उत्पन्न दोस्ताना यूआरएल मौजूदा दोस्ताना यूआरएल के साथ संघर्ष कर सकता है। (Automatic Translation)
