--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=ไม่สามารถเพิ่มชิ้นส่วนได้อีกเพราะถูกลบไปแล้ว
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=ไม่สามารถลบรายการส่วนได้เนื่องจากต้องการโดยเทมเพลตหน้าอย่างน้อยหนึ่งรายการ
 the-fragment-entry-could-not-be-found=ไม่พบรายการแฟรกเมนต์
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=ไม่พบเวอร์ชันเฟรมเวิร์ก
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=URL ที่จำง่ายเกินขีดจำกัด {0} อักษรในรูปแบบที่เข้ารหัส โปรดป้อน URL ที่สั้นกว่านี้
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=URL ที่จำง่ายที่สร้างขึ้นโดยที่อยู่อีเมลที่คุณร้องขออาจขัดแย้งกับ URL ที่จำง่ายที่มีอยู่
