--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Đoạn văn không còn có thể được thêm vào vì nó đã bị xóa. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Mục nhập đoạn không thể bị xóa vì nó được yêu cầu bởi một hoặc nhiều mẫu trang. (Automatic Translation)
 the-fragment-entry-could-not-be-found=Không tìm thấy mục nhập mảnh. (Automatic Translation)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Không tìm thấy phiên bản framework. (Automatic Translation)
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Liên kết (URL) bạn bè sinh ra bởi địa chỉ thư điện tử bạn yêu cầu có thể xung đột với Liên kết bạn bè đã tồn tại.
