--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -16449,7 +16449,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=无法再添加该片段，因为它已被删除。
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=由于一个或多个页面模板需要此片段条目，无法将其删除。
 the-fragment-entry-could-not-be-found=找不到片段条目。
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=找不到框架版本。
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=友好的 URL 超出编码格式 {0} 个字符数限制。请输入较短的 URL。
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=您请求的电子邮件地址生成的用户友好URL可能会与现有友好URL发生冲突。
