--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Δεν είναι δυνατή η προσθήκη του τμήματος, επειδή έχει διαγραφεί. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Δεν είναι δυνατή η διαγραφή της καταχώρησης τμήματος, επειδή απαιτείται από ένα ή περισσότερα πρότυπα σελίδας. (Automatic Translation)
 the-fragment-entry-could-not-be-found=Δεν ήταν δυνατή η πρόσβαση στην καταχώρηση του τμήματος. (Automatic Translation)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Η έκδοση πλατφόρμας δεν θα μπορούσε να βρεθεί.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Το φιλικό URL που παράχθηκε από το email που ζητήσατε μπορεί να συγκρούεται με ένα ήδη υπάρχον φιλικό URL.
