--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=قطعه دیگر نمی تواند اضافه شود زیرا حذف شده است. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=ورودی قطعه را نمی توان حذف کرد زیرا توسط یک یا چند قالب صفحه مورد نیاز است. (Automatic Translation)
 the-fragment-entry-could-not-be-found=ورود قطعه را نمی توان یافت. (Automatic Translation)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=پروژه یافت نشد
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=آدرس تولید شده توسط آدرس ایمیل آدرس در تضادبا ادرس موجود است.
