--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -16445,7 +16445,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Fragmenttia ei enää voi lisätä, koska se on poistettu.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Sivunosaa ei voida poistaa, koska yksi tai useampi sivumalli vaatii sitä.
 the-fragment-entry-could-not-be-found=Sivunosan merkintää ei löytynyt.
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Kehys versiota ei löytynyt.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=Ystävällinen URL ylittää {0} merkin rajan koodatussa muodossaan. Anna lyhyempi URL.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=Käyttäjäystävällinen URL-osoite on luotu sähköpostiosoiteen mukaan voi olla ristiriidassa olemassa olevan käyttäjäystävällisen URL-osoiteen kanssa.
