--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=לא ניתן עוד להוסיף את המקטע כיוון שהוא נמחק.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=לא ניתן למחוק את הקטע משום שהוא דרוש על ידי תבנית עמוד אחת או יותר.
 the-fragment-entry-could-not-be-found=ערך הקטע לא נמצא. (Automatic Translation)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=גרסת המסגרת לא נמצאה
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=ה-URL הידידותי שנוצר על בסיס כתובת הדוא"ל שביקשת עלול להימצא בסתירה עם URL ידידותי קיים.
