--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -16446,7 +16446,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=프래그먼트가 삭제되었기 때문에 더 이상 추가할 수 없습니다.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=조각 항목은 하나 이상의 페이지 템플릿에 필요하기 때문에 삭제할 수 없습니다.
 the-fragment-entry-could-not-be-found=조각 항목을 찾을 수 없습니다.
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=기구 버전은 발견될 수 없었다.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=친숙한 URL이 인코딩된 형식의 {0}자 제한을 초과합니다. 더 짧은 URL을 입력하세요.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=요청한 이메일 주소로 생성된 친숙한 URL이 기존의 친숙한 URL과 충돌할 수 있습니다.
