--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Fragmentul nu mai poate fi adăugat, deoarece a fost șters. (Automatic Translation)
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Imposibil de șters intrarea fragment, deoarece este solicitată de unul sau mai multe șabloane de pagină. (Automatic Translation)
 the-fragment-entry-could-not-be-found=Imposibil de găsit intrarea fragmentului. (Automatic Translation)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Versiunea de framework nu a fost gasita.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=ADRESA URL prietenoasă generată de adresa de e-mail solicitată poate intra în conflict cu un URL prietenos existent. (Automatic Translation)
