--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -16447,7 +16447,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Fragment-ஐ இனி சேர்க்க முடியாது, ஏனெனில் அது நீக்கப்பட்டுவிட்டது.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=Fragment entry நீக்க முடியாது. ஏனெனில் ஒன்று அல்லது அதற்கு மேற்பட்ட page templates-கள் தேவைப்படும்.
 the-fragment-entry-could-not-be-found=The fragment entry could not be found. (Automatic Copy)
-the-fragment-has-been-copied-successfully=The fragment has been copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
 the-framework-version-could-not-be-found=Framework version கிடைக்கவில்லை.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=The friendly URL exceeds the limit of {0} characters in its encoded format. Please enter a shorter URL. (Automatic Copy)
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=நீங்கள் விரும்பிய மின்னஞ்சல் முகவரியால் உருவாக்கப்படும் friendly URL ஏற்கனவே இருக்கும் friendly URL உடன் முரண்படலாம்.
