LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -7833,7 +7833,7 @@ include-all-the-information-someone-would-need-to-answer-your-question=Incluya t
 include-always=Incluir siempre
 include-artifact-in-repository=Incluir en el repositorio
 include-asset-summary=Incluir resumen de activos
-include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
+include-asset-summary-help=Habilita esta opción para que devuelva el resumen de resultados con la respuesta.
 include-asset-url=Incluir URL del activo
 include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Incluir nombre simbólico de grupo
