--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -13681,7 +13681,7 @@ rss-feed-content-length=Longueur du contenu du flux RSS
 rss-feed-name=Nom d'alimentation de RSS
 rss-feed-type=Type de flux RSS
 rss-feeds=Flux RSS
-rss-feeds-help=Représente la liste de flux RSS qui sont affichés à travers ce gabarit.
+rss-feeds-help=Représente la liste de flux RSS qui sont affichés à travers ce modèle.
 rss-format=Format RSS
 rss-portlet-instance-configuration-name=Affichage
 rss-settings=Paramètres RSS
@@ -14360,7 +14360,7 @@ selected-user=Utilisateur choisi
 selected-web-content=Contenus web sélectionnés
 selected-workflow=Flux de travail sélectionné
 selecting-a-new-structure-changes-the-available-input-fields-and-available-templates=En sélectionnant une nouvelle structure, les champs et les modèles disponibles changeront. Voulez-vous continuer ?
-selecting-a-new-structure-changes-the-available-templates-and-available-feed-item-content=Sélectionner une nouvelle structure modifie les gabarits disponibles and les contenus. Voulez-vous continuer?
+selecting-a-new-structure-changes-the-available-templates-and-available-feed-item-content=La sélection d'une nouvelle structure modifie les modèles existans et les contenus. Voulez-vous continuer ?
 selecting-a-new-structure-deletes-all-unsaved-content=Sélectionner une nouvelle structure supprime tous les contenus non enregistrés. Voulez-vous poursuivre ?
 selecting-a-new-template-deletes-all-unsaved-content=Sélectionner un nouveau gabarit supprime tous les contenus non sauvegardé. Voulez-vous continuer?
 selection=Sélection
@@ -15037,7 +15037,7 @@ small-image-extensions=Extensions des petites images
 small-image-extensions-description=Définir les extensions de fichier autorisées pour les images. Une extension avec * permettre toutes les extensions de fichier.
 small-image-file=URL de la petite image
 small-image-max-size=Taille maximum des petites images
-small-image-max-size-description=Définir la taille maximum de fichier en octet pour les images de gabarit. Une valeur de 0 peut être utilisée pour indiquer la taille illimitée.
+small-image-max-size-description=Définir la taille maximum de fichier en octet pour les images de modèle. Une valeur de 0 peut être utilisée pour indiquer une taille illimitée.
 small-image-url=URL de la petite image
 small-image-width=Largeur de l'image miniature
 small-rectangle=Miniature (petit rectangle)
@@ -15383,7 +15383,7 @@ strict-mode=Mode strict
 strictly-necessary-cookies-description-field=Description des cookies strictement nécessaires
 strikethrough=Barré
 structure=Structure
-structure-and-template=Structure et gabarit
+structure-and-template=Structure et modèle
 structure-default-values=Valeurs par défaut de la structure
 structure-field=Champ de la structure
 structure-field-indexable-enable=Champs de structure indexables activés
@@ -15993,7 +15993,7 @@ template-key-help=La clé du modèle peut être utilisée pour inclure ce modèl
 template-language=Langue du Modèle
 template-name=Nom de modèle
 template-report=Modèle du rapport
-template-type=Type de gabarit
+template-type=Type de modèle
 template-was-created=Le modèle a été créé.
 templates=Modèles de documents
 templates-for-structure-x=Modèles pour les structures : {0}
@@ -16770,7 +16770,7 @@ the-stop-node-field-cannot-be-empty=Le champ de nœud d'arrêt ne peut être vid
 the-structure-cannot-be-deleted-because-it-has-one-or-more-substructures=La structure ne peut pas être supprimée car il a une ou plusieures sous-structures.
 the-structure-cannot-be-deleted-because-it-is-being-used-by-one-or-more-structure-links=La structure ne peut pas être supprimée car elle est utilisée par un ou plusieurs liens de structure.
 the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-structure-links=La structure ne peut pas être supprimée car il est requis par un ou plusieurs lien de structure.
-the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-templates=La structure ne peut pas être supprimée car il est requis par un ou plusieurs gabarits.
+the-structure-cannot-be-deleted-because-it-is-required-by-one-or-more-templates=La structure ne peut pas être supprimée car elle est requise par un ou plusieurs modèles.
 the-structure-could-not-be-found=La structure n'a pas pu être trouvée.
 the-structure-was-imported-without-a-custom-view=La structure a été importée sans vue personnalisée.
 the-structure-was-not-successfully-imported=La structure n'a pas été importée.
@@ -16791,7 +16791,7 @@ the-task-could-not-be-found=La tâche n'a pas pu être trouvée.
 the-task-form-x-for-task-x-must-specify-a-form-reference-or-form-definition=Le formulaire de tâche {0} pour la tâche {1} doit préciser une référence ou définition de formulaire.
 the-tax-category-could-not-be-found=La catégorie de TVA est introuvable.
 the-tax-fixed-rate-could-not-be-found=Le taux fixe de TVA est introuvable.
-the-template-cannot-be-deleted-because-it-is-required-by-one-or-more-template-links=Ce gabarit ne peut pas être supprimé car il est requis by un ou plusieurs liens de gabarit.
+the-template-cannot-be-deleted-because-it-is-required-by-one-or-more-template-links=Ce modèle ne peut pas être supprimé car il est requis par un ou plusieurs liens de modèles.
 the-template-could-not-be-found=Le modèle de document n'a pas pu être trouvé.
 the-tensorflow-model-could-not-be-downloaded.-please-contact-your-administrator=Le modèle TensorFlow n'a pas pu être téléchargé. Veuillez contacter votre administrateur.
 the-tensorflow-model-is-being-downloaded-in-the-background.-no-tags-will-be-created-until-the-model-is-fully-downloaded=Le modèle TensorFlow est en cours de téléchargement en arrière-plan. Aucune étiquette ne sera créée tant que le modèle ne sera pas entièrement téléchargé.
@@ -17153,8 +17153,8 @@ there-are-no-roles=Il n'y a aucun rôle.
 there-are-no-rules=Il n'y a aucun règle.
 there-are-no-rules-description=Définissez les conditions et actions pour modifier dynamiquement les champs et éléments du formulaire.
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Il n'y a aucune règle pour le moment. Cliquez sur l'icône Plus pour ajouter la première.
-there-are-no-saved-export-templates=Il n'y a aucun gabarit d'export non sauvegardé.
-there-are-no-saved-publish-templates=Il n'y a aucun gabarit de publication non sauvegardé.
+there-are-no-saved-export-templates=Il n'y a aucun modèle d'export non sauvegardé.
+there-are-no-saved-publish-templates=Il n'y a aucun modèle de publication non sauvegardé.
 there-are-no-segments=Il n'y a pas de segment.
 there-are-no-selected-pages-all-pages-will-therefore-be-exported=Aucune page sélectionnée. Toutes les pages seront exportées.
 there-are-no-selected-servers-to-register=Il n'y a aucun serveur sélectionné à enregistrer.
@@ -17221,7 +17221,7 @@ there-are-no-x-related-issues=Il n'y a pas de {0} problèmes associés.
 there-are-one-or-more-mandatory-vocabularies-assigned-to-the-knowledge-base-article=Un ou plusieurs vocabulaires obligatoires ont été assignés à l'article de la base de connaissance.
 there-are-other-redirects-pointing-to-the-source-url-of-this-redirect=D'autres redirections pointent vers l'URL source de cette redirection. Cela va créer une chaîne de redirections pour que les utilisateurs soient redirigés plusieurs fois avant d'atteindre leur destination.
 there-are-shipment-items-from-orders-with-different-shipping-methods-selected=Des articles en expédition proviennent de commandes avec différentes méthodes d'expédition sélectionnées. Vous pouvez modifier la livraison pour choisir la méthode d'expédition et l'URL de suivi de base que vous souhaitez y associer.
-there-are-template-references-to-this-structure.-please-update-them-if-a-field-name-is-renamed-or-removed=Il y a de référence de gabarits à cette structure. Veuillez les mettre à jour si le nom d'un champs est modifié ou supprimé.
+there-are-template-references-to-this-structure.-please-update-them-if-a-field-name-is-renamed-or-removed=Il existe des références de modèle à cette structure. Veuillez les mettre à jour si un nom de champ est renommé ou supprimé.
 there-are-x-membership-requests-pending=Il y a {0} demandes d'adhésion en attente.
 there-are-x-more-results-narrow-your-searc-to-get-more-precise-results={0} autres résultat(s) sont disponibles. Affinez votre recherche pour obtenir des résultats plus précis.
 there-are-x-results-for-x=Il y a {0} résultats pour {1}.
@@ -18301,7 +18301,7 @@ use-the-opensocial-gadget-url-to-create-an-opensocial-gadget=Utiliser l'url du g
 use-the-original-author=Utiliser l'auteur original
 use-the-original-author-help=Garder l'auteur original du contenu importé quand cela est possible. Utiliser l'utilisateur actuel comme auteur si l'auteur original n'est pas trouvé.
 use-the-same-assignee-for-all-tasks=Utiliser le même affecté pour toutes les tâches.
-use-the-same-look-and-feel-of-the-pages-in-which-this-template-is-used=Utiliser la même apparence que les pages dans lesquelles ce gabarit est utilisé.
+use-the-same-look-and-feel-of-the-pages-in-which-this-template-is-used=Utiliser la même apparence que les pages dans lesquelles ce modèle est utilisé.
 use-the-same-look-and-feel-of-the-x=Utiliser la même présentation que {0}.
 use-the-token-genereted-in-your-analytics-cloud-to-connect-this-workspace=Utilisez le jeton généré dans votre Analytics Cloud pour connecter cet espace de travail.
 use-this-client-extension-to-fully-replace-the-default-css-contained-in-the-theme=Utilisez cette extension client pour remplacer entièrement le CSS par défaut contenu dans le thème.
