--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3066,7 +3066,7 @@ chapters=Fejezetek
 character-options=Karakterek lehetőségei
 character-threshold=Karakterek küszöbértéke
 character-threshold-for-displaying-suggestions=A javaslatok megjelenítésének karakter-küszöbértéke
-character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Állítsa be, hogy a felhasználónak hány karaktert kell beírnia a javaslatok megjelenítése előtt.
 characters=Karakterek
 characters-blacklist=Karakterek feketelistája
 characters-maximum=Maximum karakter
@@ -5378,7 +5378,7 @@ display-fields-and-one-to-one-relationships=Mezők és egy-az-egyhez kapcsolatok
 display-folder-facet=Mappa Facet megjelenítése
 display-frequencies=Megjelenítés gyakorisága
 display-group-name=Csoportnév megjelenítése
-display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
+display-group-name-help=Adja meg a fejléc címkéjét az egyes hozzászólók javaslataihoz.
 display-horizontally=Megjelenítés vízszintesen
 display-immediately=Megjelenítés azonnal
 display-label=Címke megjelenítése
@@ -6741,7 +6741,7 @@ field.user-name=Név
 fields=Mezők
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=További mezők használhatók, ha a felhasználó által megadott kritériumok alapján kell megkülönböztetni a tételeket. Például pólók árusítása esetén hozzáadható egy <em>Méret</em> mező, <em>S, M, L, XL</em> értékekkel. Az értékeket vesszővel elválasztva kell megadni.
 fields-help=A mezők listája, amelyekből a szöveget beolvassuk és elemezzük.
-fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
+fields-suggestion-help=Adja meg a válasszal együtt visszaküldeni kívánt további mezőket.
 fields-to-display=Megjelenítendő mezők
 fields-to-display-help=Adja meg az összegzésben megjelenítendő mezők nevét egy vesszőkkel elválasztott listában. Ha nincs beállítva, minden mező megjelenik. Az első mező mindig címként jelenik meg. Ha két mező van beállítva, a második mező mindig tartalomként jelenik meg.
 fields-to-return=A visszaadandó mezők
@@ -7264,8 +7264,8 @@ go-to-this-version=Ugrás ehhez a változathoz
 go-to-workspace=Ugrás a munkaterületre
 go-to-x=Ugrás ide: {0}
 goal=Cél
-google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
-google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
+google-analytics-4-custom-configuration=Google Analytics 4 egyéni konfigurációja
+google-analytics-4-id=Google Analytics 4 azonosító
 google-analytics-create-custom-configuration=Google Analytics létrehozási módszer egyéni konfigurációja
 google-analytics-custom-configuration=Google Analytics egyéni konfigurációja
 google-analytics-id=Google Analytics felhasználói azonosító
@@ -7833,9 +7833,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Adjon meg
 include-always=Mindig belefoglalni
 include-artifact-in-repository=Tárgy bevitele az adattárba
 include-asset-summary=Tartalom összegzésével együtt
-include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
+include-asset-summary-help=Engedélyezze az eredményösszefoglaló visszaküldését a válasszal együtt.
 include-asset-url=Tartalom URL-címével együtt
-include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
+include-asset-url-help=Engedélyezze az eredményre mutató link visszaküldését a válasszal együtt.
 include-bundle-symbolic-name=A csomag szimbolikus nevével együtt
 include-bundle-symbolic-name-description=Ha meg van jelölve, a csomag szimbolikus neve kerül a hatókör előtagjába.
 include-clear-filters-option=Szűrők törlési lehetőségével együtt
@@ -9045,7 +9045,7 @@ lead-font-size=Kezdőbetű mérete
 lead-font-weight=Kezdőbetű vastagsága
 leaderboard=Eredményjelző
 learn-more=További információk
-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
+learn-more-about-date-formats=További tudnivalók az adatformátumokról.
 learn-more-about-x=További tudnivalók: {0}.
 learning-to-rank-configuration-name=Rangsorolás tanulása
 leave=Kilépés
@@ -11589,7 +11589,7 @@ page-design-options=Oldaltervezés lehetőségei
 page-display-order=Oldal megjelenítési sorrend
 page-edition-mode-x=Oldalszerkesztési üzemmód: {0}
 page-editor-auto-extend-session-enabled-description=Az engedélyezés automatikusan meghosszabbítja a munkamenetet, amíg az oldalszerkesztő nyitva van.
-page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
+page-editor-autosaves-your-work=Az oldalszerkesztő automatikusan elmenti a munkáját.
 page-editor-configuration-name=Oldalszerkesztő
 page-editor-max-number-of-items-edit-mode-description=A gyűjteményben megjeleníthető elemek maximális száma Szerkesztés módban korlátozott az oldalmegjelenítés teljesítménye miatt. Ez a korlátozás nincs hatással a gyűjtemény közzétett oldalon történő megjelenítésére. Kérjük, vegye figyelembe, hogy az érték növelése negatív hatással van a Tartalom oldal teljesítményére Szerkesztés módban.
 page-elements=Oldal elemei
@@ -11658,7 +11658,7 @@ pages-option=Oldalak lehetőség
 pages-options=Oldal beállítások
 pages-to-export=Exportálandó oldalak
 pages-to-publish=Publikálandó oldalak
-pages-type=Pages Type (Automatic Copy)
+pages-type=Az oldalak típusa
 pages-variations-help=A Webhely Oldal Variációk lehetővé teszik számodra, hogy párhuzamosan dolgozhass a webhely oldalainak különböző változataival. A tartalom megosztásra kerül az összes Webhely Oldal Variációkaiddal. Bármely Webhely Oldal Variációk élesbe publikálása időzíthető vagy manuálisan elvégezhető.
 pages-with-tag-x=<em>{0}</em> címkével rendelkező oldalak.
 pages-with-x-x=Oldalak ezzel: {0} <em>{1}</em>.
@@ -13213,7 +13213,7 @@ reminder=Emlékeztető
 reminder-email=Emlékeztető e-mail
 reminder-queries=Emlékeztető kérdések
 reminder-query-and-answer-cannot-be-empty=Emlékeztető kérdés és válasz nem maradhat üresen
-reminder-query-answer=Reminder Query Answer (Automatic Copy)
+reminder-query-answer=Emlékeztető lekérdezési válasz
 reminder-query-question=Emlékeztető lekérdezési kérdés
 reminders=Emlékeztetők
 remote=Távoli
@@ -14506,8 +14506,8 @@ set-the-discount-amount-and-the-discount-type=Állítsd be a kedvezmény összeg
 set-the-display-order-of-child-pages=Gyerek-oldalak megjelenési sorrendjének beállítása.
 set-the-display-order-of-news-feeds=Hírcsatornák megjelenési sorrendjének beállítása.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Állítsd be a következő értékeket az e-mailek mappákba szűréséhez.
-set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
-set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Az oldalakhoz használt Google Analytics 4 egyéni lehetőségek beállítása.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Az oldalakhoz használt Google Analytics 4 azonosító beállítása.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Beállítja a Google Analytics létrehozási módszer ezekhez az oldalakhoz használt egyéni lehetőségeit.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Az oldalakhoz használt Google Analytics egyéni lehetőségek beállítása.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Az oldalakhoz használt Google Analytics ID beállítása.
@@ -15001,7 +15001,7 @@ sites-tab-description=A webhelyek egyszerre csak egy tulajdonsághoz rendelhető
 sites-that-i-administer=Webhelyek, amiket án adminisztrálok
 sites-to-sync-x=Szinkronizálandó webhelyek - {0}
 size=Méret
-size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
+size-suggestion-help=Állítsa be a javaslatokban megjeleníthető találatok maximális számát.
 skip-to-content=Ugrás a tartalomhoz
 skip-to-search=Ugrás a kereséshez
 sku=SKU (leltári azonosító)
@@ -15517,7 +15517,7 @@ successfully-unassigned-display-page-template=A alapértelmezett megjelenítőol
 such-as-x-or-x=Mint {0} vagy {1}
 suffix=Utótag
 suggestion-contributor=Javaslat közreműködője
-suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
+suggestion-contributor-help=Állítsa be a közreműködő javaslatok megjelenítéséhez használt nevét.
 suggestion-in-progress-email=Javaslat folyamatban e-mail
 suggestion-received-email=Javaslat beérkezett e-mail
 suggestion-resolved-email=Javaslat megoldva e-mail
@@ -15526,10 +15526,10 @@ suggestion-was-deleted-successfully=A javaslat sikeresen törölve.
 suggestion-was-saved-successfully=Javaslat sikeresen elmentve.
 suggestions=Javaslatok
 suggestions-configuration=Javaslatok konfigurációja
-suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
+suggestions-configuration-description=A felhasználó által a keresőkifejezések beírása közben látott javaslatok konfigurálása.
 suggestions-contributor-configuration=Javaslatbenyújtó konfigurációja
 suggestions-contributor-configuration-help=A javaslatbenyújtó konfigurációs JSON beállítása.
-suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Adja meg a javaslatok közreműködője contributorName nevét, a displayGroupName nevet a megjelenítendő fejléc szövegével és a közreműködő által visszaadott eredmények maximális számát meghatározó méretet.
 suggestions-were-deleted-successfully=A javaslatok sikeresen törölve.
 suite=Programcsomag
 sum=Összeg
